--- a/client/blocks/reader-related-card/style.scss
+++ b/client/blocks/reader-related-card/style.scss
@@ -141,6 +141,7 @@
 .reader-related-card__blocks {
 	border-top: 1px solid var(--color-neutral-10);
 	margin-top: 30px;
+	padding-top: 11px;
 
 	@include breakpoint-deprecated( "<480px" ) {
 		margin-top: 0;
@@ -150,7 +151,7 @@
 		@include long-content-fade( $size: 35px );
 		bottom: 0;
 		height: 22px;
-		top: inherit;
+		top: auto;
 		visibility: visible;
 	}
 
@@ -187,24 +188,10 @@
 			margin: 0 0 14px;
 		}
 	}
-}
-
-// Wrapper for entire recommended block
-.reader-related-card__blocks {
-	border-top: 1px solid var(--color-neutral-10);
-	padding-top: 11px;
 
 	// Wrapper for site title and excerpt
 	.reader-related-card__post {
 		max-height: 17px * 1.6 * 4;
-
-		&::after {
-			@include long-content-fade( $size: 35px );
-			bottom: 0;
-			height: 22px;
-			top: auto;
-			visibility: visible;
-		}
 	}
 }
 
@@ -257,7 +244,7 @@
 		max-height: 150px;
 
 	}
-	@include breakpoint-deprecated( '>960px' ) {
+	@include breakpoint-deprecated( ">960px" ) {
 		min-height: 153px;
 	}
 }
@@ -267,16 +254,16 @@
 	}
 	.reader-related-card__title {
 		display: -webkit-box;
-    overflow: hidden;
-    word-wrap: break-word;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
+		overflow: hidden;
+		word-wrap: break-word;
+		-webkit-line-clamp: 1;
+		-webkit-box-orient: vertical;
 	}
 }
 .reader-stream__recommended-post-dismiss {
 	display: none;
 }
-@include breakpoint-deprecated( '<660px' ) {
+@include breakpoint-deprecated( "<660px" ) {
 	.reader-stream__recommended-posts {
 		border-bottom: 5px solid var(--color-neutral-0) !important;
 		margin: 0 !important;
@@ -339,8 +326,8 @@
 	display: -webkit-box;
 	overflow: hidden;
 	word-wrap: break-word;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
 }
 
 // Follow buttons in recommended posts
@@ -356,7 +343,7 @@
 	z-index: z-index(".reader-related-card__meta", ".follow-button");
 
 	.reader-follow-feed {
-		fill: var( --color-primary );
+		fill: var(--color-primary);
 	}
 
 	@include breakpoint-deprecated( "<960px" ) {
