--- a/apps/happychat/src/index.ejs
+++ b/apps/happychat/src/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="no-scroll">
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=9" />
