--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -131,7 +131,7 @@
 	}
 
 	.reader-post-actions {
-		margin: 10px 0 0;
+		margin: 16px 0 0;
 	}
 
 	.reader-post-actions__item {
@@ -236,12 +236,6 @@
 	.comments__comment-actions {
 		display: flex;
 		justify-content: flex-start;
-	}
-	.comments__comment-actions .components-button.like-button {
-		.like-button__label-count {
-			position: relative;
-			top: 1px;
-		}
 	}
 	.reader-post-card__byline {
 		margin-top: 16px;
@@ -545,48 +539,23 @@
 
 // Action buttons in post card
 .reader-post-card.card .reader-post-actions__item {
-	font-size: $font-body-small;
-	height: 22px;
-
-	&.reader-post-actions__visit .gridicon {
-		position: relative;
-		left: -2px;
-		top: -1px;
-	}
 
 	.reader-share__button .gridicon {
-		position: relative;
-		top: 0;
 		margin-right: 0;
-		margin-top: 0;
-	}
-
-	.comment-button {
-		align-items: flex-start;
 	}
 
 	.comment-button .gridicon {
-		top: 4px;
 		margin-right: 2px;
 	}
 
 	.like-button {
-		display: inline-block;
-		padding: 4px 0 4px 4px;
+		align-items: center;
+		display: flex;
+		height: 20px;
 		text-align: left;
-		vertical-align: top;
 		.like-button__like-icons {
-			height: 18px;
-			width: 18px;
-			display: inline-block;
-			margin-right: 5px;
-			vertical-align: top;
 			position: relative;
 			top: 1px;
-		}
-		.like-button__label-count {
-			position: relative;
-			top: 5px;
 		}
 	}
 
@@ -605,10 +574,6 @@
 
 // Follow button for stream cards
 .reader-post-card.card .follow-button {
-	flex-shrink: 0;
-	align-self: flex-start;
-	margin-right: 8px;
-	margin-top: 6px;
 
 	.gridicon {
 		fill: var(--color-primary);
