--- a/client/layout/masterbar/woo.scss
+++ b/client/layout/masterbar/woo.scss
@@ -233,6 +233,7 @@
 		font-size: $font-body;
 		padding-bottom: 0;
 		margin: 0;
+		line-height: 24px;
 
 		a {
 			color: var(--studio-gray-100);
@@ -501,7 +502,8 @@
 		}
 	}
 
-	.login__two-factor-footer {
+	.login__two-factor-footer,
+	.login__lost-password-footer {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -571,6 +573,14 @@
 
 	.logged-out-form__links {
 		text-align: center;
+	}
+
+	.login__lostpassword-form {
+		margin-top: 50px;
+
+		.login__form-action {
+			margin: 16px 0 52px;
+		}
 	}
 
 	// Signup styles
