--- a/packages/help-center/src/styles.scss
+++ b/packages/help-center/src/styles.scss
@@ -213,6 +213,7 @@ $head-foot-height: 50px;
 
 		> *:not(iframe) {
 			padding: 16px;
+			box-sizing: border-box;
 		}
 	}
 
@@ -235,6 +236,12 @@ $head-foot-height: 50px;
 
 				&:hover {
 					background: var(--color-neutral-0);
+				}
+
+				> svg:last-child {
+					margin-left: auto;
+					margin-right: 0;
+					background: unset;
 				}
 			}
 		}
@@ -260,6 +267,7 @@ $head-foot-height: 50px;
 
 	.help-center-sibyl-articles__container {
 		padding-top: 0;
+		flex: 1;
 	}
 
 	.help-center-container__loading,
