add strikethrough for Launchpad completed tasks

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
@@ -237,6 +237,7 @@
 	.launchpad__checklist-item-text {
 		color: var(--studio-gray-50);
 		font-weight: 400;
+		text-decoration: line-through;
 	}
 
 	.launchpad__checklist-item-chevron,
