--- a/apps/editing-toolkit/editing-toolkit-plugin/help-center/src/help-center.scss
+++ b/apps/editing-toolkit/editing-toolkit-plugin/help-center/src/help-center.scss
@@ -1,3 +1,5 @@
+@import "calypso/assets/stylesheets/shared/mixins/breakpoints";
+
 .help-center.entry-point-button {
 	&.is-active {
 		background: #1e1e1e;
@@ -28,12 +30,16 @@
 /**
  * WP-ADMIN Masterbar Styling
  */
-.wp-toolbar {
+#wpadminbar #wp-toolbar {
 	#wp-admin-bar-help-center {
 		position: relative;
 		padding: 0;
 		width: 36px;
 		right: 5px;
+		display: none;
+		@include breakpoint-deprecated( ">960px" ) {
+			display: block;
+		}
 
 		svg {
 			position: absolute;
