--- a/client/my-sites/plan-comparison-with-highlights/style.scss
+++ b/client/my-sites/plan-comparison-with-highlights/style.scss
@@ -72,10 +72,6 @@ $plan-features-sidebar-width: 272px;
 	text-align: center;
 }
 
-.plans-features-main__group.is-wpcom {
-	padding-top: 19px;
-}
-
 .plans-wrapper {
 	margin: 0 auto;
 	padding: 20px 0 10px;
@@ -92,6 +88,10 @@ $plan-features-sidebar-width: 272px;
 		@include breakpoint-deprecated( ">660px" ) {
 			max-width: 1100px;
 		}
+	}
+
+	.signup__steps .plans-features-main__group.is-scrollable & {
+		max-width: 100%;
 	}
 
 	.plan-comparison-with-highlights__table {
@@ -336,28 +336,9 @@ $plan-features-sidebar-width: 272px;
 	}
 }
 
-.plans-features-main__group.is-scrollable {
-	position: relative;
 
-	.is-section-signup & {
-		width: 100vw;
-		margin-left: calc(50% - 50vw);
-
-		@media ( min-width: 1600px ) {
-			max-width: 1600px;
-			margin-left: -280px;
-		}
-
-		@include breakpoint-deprecated( "<1040px" ) {
-			padding-top: 12px;
-		}
-	}
-
-	.signup__steps & .plan-features--signup {
-		max-width: 100%;
-	}
-
-	.plan-comparison-with-highlights__content {
+.plan-comparison-with-highlights__content {
+	.plans-features-main__group.is-scrollable & {
 		margin: -16px 0 0;
 		padding-top: $plan-features-header-banner-height;
 	}
