Import flow: include styles

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/importer/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/importer/style.scss
@@ -1,7 +1,8 @@
 /**
  * Common importer integration styles
  */
-.site-setup {
+.site-setup,
+.import-focused {
 	.importer-wrapper:not(.importer-wrapper__wordpress) {
 		max-width: 700px;
 		margin: auto;
