--- a/client/signup/style.scss
+++ b/client/signup/style.scss
@@ -128,7 +128,7 @@ body.is-section-signup {
 	}
 
 	// Hide the masterbar for realz
-	&.has-no-masterbar .masterbar {
+	.masterbar {
 		display: none;
 	}
 
