--- a/client/my-sites/plugins/plugins-browser-item/style.scss
+++ b/client/my-sites/plugins/plugins-browser-item/style.scss
@@ -41,17 +41,36 @@
 	}
 
 	&.compact {
+		.plugins-browser-item__link {
+			padding: 16px;
+		}
+
+		.plugins-browser-item__title {
+			font-size: $font-body-small;
+		}
+
 		.plugins-browser-item__description {
+			font-size: $font-body-extra-small;
 			margin: 5px 0 0 calc(60px + 16px); // icon width + margin
+		}
+
+		@include breakpoint-deprecated(">960px") {
+			width: calc(33% - 10px); // 3 column grid with 20px gutter
+		}
+
+		@include breakpoint-deprecated("<960px") {
+			width: 100%;
 		}
 	}
 
-	@include breakpoint-deprecated(">960px") {
-		width: calc(50% - 10px); // 2 column grid with 20px gutter
-	}
+	&.extended {
+		@include breakpoint-deprecated(">960px") {
+			width: calc(50% - 10px); // 2 column grid with 20px gutter
+		}
 
-	@include breakpoint-deprecated("<960px") {
-		width: 100%;
+		@include breakpoint-deprecated("<960px") {
+			width: 100%;
+		}
 	}
 
 	&.incompatible {
