--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -830,6 +830,25 @@
 			}
 		}
 	}
+	&.one-image {
+		.reader-post-card__featured-images-item {
+			width: 100%;
+			.reader-featured-image {
+				position: relative;
+				&::after {
+					content: "";
+					position: absolute;
+					pointer-events: none;
+					top: 0;
+					left: 0;
+					bottom: 0;
+					right: 0;
+					box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
+					border-radius: 6px;
+				}
+			}
+		}
+	}
 }
 
 .reader-post-card__featured-images-item {
