--- a/packages/help-center/src/styles.scss
+++ b/packages/help-center/src/styles.scss
@@ -108,11 +108,10 @@ $head-foot-height: 50px;
 		}
 
 		&.is-mobile {
-			top: 45px;
 			bottom: 0;
 			left: 0;
 			right: 0;
-			max-height: 100%;
+			max-height: calc(100% - 45px);
 
 			.help-center__container-content {
 				flex: auto;
