domains and step merged

--- a/client/landing/stepper/declarative-flow/internals/global.scss
+++ b/client/landing/stepper/declarative-flow/internals/global.scss
@@ -58,6 +58,7 @@ button {
 .plugin-bundle,
 .newsletter-setup,
 .newsletter-post-setup,
+.domains,
 .patterns,
 .link-in-bio-setup,
 .link-in-bio-post-setup,
