--- a/client/my-sites/customer-home/cards/features/go-mobile/style.scss
+++ b/client/my-sites/customer-home/cards/features/go-mobile/style.scss
@@ -73,6 +73,7 @@
 	}
 
 	.go-mobile__subheader {
+		/* stylelint-disable-next-line scales/font-sizes */
 		font-size: 0.9375rem; //typography-exception
 		line-height: 1.3;
 	}
