--- a/client/blocks/comment-button/style.scss
+++ b/client/blocks/comment-button/style.scss
@@ -20,6 +20,7 @@
 }
 
 .comment-button__label {
+	/* stylelint-disable-next-line declaration-property-unit-allowed-list */
 	font-size: 13px;
 	font-weight: 500;
 
@@ -28,12 +29,14 @@
 	}
 
 	.comment-button__label-count {
+		/* stylelint-disable-next-line declaration-property-unit-allowed-list */
 		font-size: 13px;
 		font-weight: 500;
 	}
 }
 
 .reader-full-post .reader-post-actions .comment-button__label {
+	/* stylelint-disable-next-line declaration-property-unit-allowed-list */
 	font-size: 13px;
 	font-weight: 500;
 }
