--- a/client/blocks/like-button/style.scss
+++ b/client/blocks/like-button/style.scss
@@ -29,7 +29,7 @@
 	&.is-liked {
 		color: var(--color-text-subtle);
 
-		
+
 		.gridicons-star {
 			opacity: 1;
 			fill: var(--color-link);
@@ -75,6 +75,7 @@
 	}
 
 	.like-button__label-count {
+		/* stylelint-disable-next-line declaration-property-unit-allowed-list */
 		font-size: 13px;
 		font-weight: 500;
 	}
