--- a/client/blocks/post-edit-button/style.scss
+++ b/client/blocks/post-edit-button/style.scss
@@ -34,6 +34,7 @@
 }
 
 .post-edit-button__label {
+	/* stylelint-disable-next-line declaration-property-unit-allowed-list */
 	font-size: 13px;
 	margin-left: 4px;
 
