--- a/client/layout/masterbar/woo.scss
+++ b/client/layout/masterbar/woo.scss
@@ -135,7 +135,7 @@
 	}
 
 	.button:not(.social-buttons__button) {
-		border-radius: 4px; /* stylelint-disable-line scales/radii */
+		border-radius: 4px;
 		border: 2px solid $woo-purple-60;
 		text-decoration: none;
 		width: auto;
