--- a/client/my-sites/plugins/plugins-browser-item/style.scss
+++ b/client/my-sites/plugins/plugins-browser-item/style.scss
@@ -1,7 +1,10 @@
 @use "../variables";
 @import "@automattic/color-studio/dist/color-variables";
+@import "@wordpress/base-styles/breakpoints";
+@import "@wordpress/base-styles/mixins";
 
 .plugins-browser-item {
+	width: 100%;
 	background-color: $studio-white;
 	box-sizing: border-box;
 	cursor: pointer;
@@ -59,24 +62,22 @@
 		.plugins-browser-item__description {
 			font-size: $font-body-extra-small;
 			margin: 5px 0 0 0;
+			text-overflow: ellipsis;
+			white-space: nowrap;
 		}
 
-		@include breakpoint-deprecated(">960px") {
+		@include break-medium {
+			width: calc(50% - 10px); // 2 column grid with 20px gutter
+		}
+
+		@include break-wide {
 			width: calc(33% - 10px); // 3 column grid with 20px gutter
-		}
-
-		@include breakpoint-deprecated("<960px") {
-			width: 100%;
 		}
 	}
 
 	&.extended {
-		@include breakpoint-deprecated(">960px") {
+		@include break-large {
 			width: calc(50% - 10px); // 2 column grid with 20px gutter
-		}
-
-		@include breakpoint-deprecated("<960px") {
-			width: 100%;
 		}
 	}
 
