--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -272,6 +272,18 @@
 		}
 	}
 
+	&::after {
+		content: "";
+		position: absolute;
+		pointer-events: none;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
+		border-radius: 6px;
+	}
+
 	&::before {
 		content: "";
 		background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.37) 65%, rgba(0, 0, 0, 1) 110%);
@@ -281,6 +293,7 @@
 		bottom: 0;
 		left: 0;
 		width: 100%;
+		border-radius: 0 0 6px 6px;
 	}
 }
 
