--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -281,7 +281,7 @@
 		bottom: 0;
 		right: 0;
 		box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
-		border-radius: 6px;
+		border-radius: 4px;
 	}
 
 	&::before {
@@ -293,7 +293,7 @@
 		bottom: 0;
 		left: 0;
 		width: 100%;
-		border-radius: 0 0 6px 6px;
+		border-radius: 0 0 4px 4px;
 	}
 }
 
@@ -754,6 +754,7 @@
 		}
 		/* First image */
 		.reader-post-card__featured-images-item:first-child {
+			border-top-left-radius: 4px;
 			border-bottom-left-radius: 4px;
 			max-height: 302px;
 			overflow: hidden;
@@ -857,7 +858,7 @@
 					bottom: 0;
 					right: 0;
 					box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
-					border-radius: 6px;
+					border-radius: 4px;
 				}
 			}
 		}
