--- a/client/my-sites/plugins/plugins-browser-item/style.scss
+++ b/client/my-sites/plugins/plugins-browser-item/style.scss
@@ -1,7 +1,10 @@
 @use "../variables";
 @import "@automattic/color-studio/dist/color-variables";
+@import "@wordpress/base-styles/breakpoints";
+@import "@wordpress/base-styles/mixins";
 
 .plugins-browser-item {
+	width: 100%;
 	background-color: $studio-white;
 	box-sizing: border-box;
 	cursor: pointer;
@@ -41,17 +44,41 @@
 	}
 
 	&.compact {
+		.plugin-icon {
+			width: 40px;
+			height: 40px;
+			margin-right: 16px;
+		}
+
+		.plugins-browser-item__link {
+			padding: 16px;
+		}
+
+		.plugins-browser-item__title {
+			font-size: $font-body-small;
+			margin-left: 0;
+		}
+
 		.plugins-browser-item__description {
-			margin: 5px 0 0 calc(60px + 16px); // icon width + margin
+			font-size: $font-body-extra-small;
+			margin: 5px 0 0 0;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+		}
+
+		@include break-medium {
+			width: calc(50% - 10px); // 2 column grid with 20px gutter
+		}
+
+		@include break-wide {
+			width: calc(33% - 10px); // 3 column grid with 20px gutter
 		}
 	}
 
-	@include breakpoint-deprecated(">960px") {
-		width: calc(50% - 10px); // 2 column grid with 20px gutter
-	}
-
-	@include breakpoint-deprecated("<960px") {
-		width: 100%;
+	&.extended {
+		@include break-large {
+			width: calc(50% - 10px); // 2 column grid with 20px gutter
+		}
 	}
 
 	&.incompatible {
