--- a/client/landing/stepper/declarative-flow/internals/videopress.scss
+++ b/client/landing/stepper/declarative-flow/internals/videopress.scss
@@ -20,6 +20,15 @@ body.is-videopress-stepper {
 			.progress-bar__progress {
 				background-color: $videopress-theme-yellow;
 				border-radius: 0;
+				animation: progress-lerp ease-in-out 250ms;
+				@keyframes progress-lerp {
+					0% {
+						width: calc(var(--previous-progress));
+					}
+					100% {
+						width: calc(var(--current-progress));
+					}
+				}
 			}
 		}
 
@@ -47,6 +56,19 @@ body.is-videopress-stepper {
 		}
 
 		.step-container {
+			animation: step-fade-in ease 500ms;
+			animation-iteration-count: 1;
+			animation-fill-mode: forwards;
+
+			@keyframes step-fade-in {
+				0% {
+					opacity: 0;
+				}
+				100% {
+					opacity: 1;
+				}
+			}
+
 			.step-container__header {
 				header {
 					.formatted-header__title {
