fix stylelint errors

--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -280,7 +280,7 @@
 		left: 0;
 		bottom: 0;
 		right: 0;
-		box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
+		box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
 		border-radius: 4px;
 	}
 
@@ -857,7 +857,7 @@
 					left: 0;
 					bottom: 0;
 					right: 0;
-					box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
+					box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
 					border-radius: 4px;
 				}
 			}
