--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -272,6 +272,18 @@
 		}
 	}
 
+	&::after {
+		content: "";
+		position: absolute;
+		pointer-events: none;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+		border-radius: 4px;
+	}
+
 	&::before {
 		content: "";
 		background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.37) 65%, rgba(0, 0, 0, 1) 110%);
@@ -281,6 +293,7 @@
 		bottom: 0;
 		left: 0;
 		width: 100%;
+		border-radius: 0 0 4px 4px;
 	}
 }
 
@@ -741,6 +754,7 @@
 		}
 		/* First image */
 		.reader-post-card__featured-images-item:first-child {
+			border-top-left-radius: 4px;
 			border-bottom-left-radius: 4px;
 			max-height: 302px;
 			overflow: hidden;
@@ -827,6 +841,25 @@
 			img {
 				border-bottom-right-radius: 4px;
 				border-top-right-radius: 4px;
+			}
+		}
+	}
+	&.one-image {
+		.reader-post-card__featured-images-item {
+			width: 100%;
+			.reader-featured-image {
+				position: relative;
+				&::after {
+					content: "";
+					position: absolute;
+					pointer-events: none;
+					top: 0;
+					left: 0;
+					bottom: 0;
+					right: 0;
+					box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+					border-radius: 4px;
+				}
 			}
 		}
 	}
