fix like button hover state (#68962)

--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -558,6 +558,28 @@
 			@include hide-content-accessibly();
 		}
 	}
+
+	&:hover,
+	button.is-active,
+	.like-button.is-liked {
+		svg.reader-external path {
+			fill: var(--color-link);
+		}
+
+		svg.reader-comment path,
+		svg.reader-share path {
+			stroke: var(--color-link);
+		}
+		svg.reader-star path {
+			stroke: var(--color-link);
+		}
+	}
+
+	.like-button.is-liked {
+		svg.reader-star path {
+			fill: var(--color-link);
+		}
+	}
 }
 
 // Follow button for stream cards
