Updated collow conversation and manage comment link alignment

--- a/client/blocks/comments/comment-count.scss
+++ b/client/blocks/comments/comment-count.scss
@@ -2,8 +2,7 @@
 	color: var(--color-text-subtle);
 	font-size: $font-body-small;
 	font-weight: 600;
-	line-height: 1;
-	margin: 8px 0 17px;
+	margin-bottom: 17px;
 }
 
 .comments__comment-count-phrase {
