--- a/client/blocks/comments/comment-actions.scss
+++ b/client/blocks/comments/comment-actions.scss
@@ -4,26 +4,25 @@
 	color: var(--color-text-subtle);
 	display: flex;
 	font-size: $font-body-small;
+	gap: 22px;
 	justify-content: flex-start;
 	list-style: none;
 
 	.components-button {
+		align-items: center;
 		color: var(--color-text-subtle);
-		display: inline-block;
-		padding: 4px;
+		display: flex;
 		height: auto;
-		margin-right: 8px;
 		cursor: pointer;
 		font-size: $font-body-small;
 		font-weight: 400;
+		gap: 4px;
+		justify-content: center;
+		padding: 0;
 
-		&.comments__comment-actions-reply {
-			margin-left: -7px;
-		}
-
-		.gridicons-reply {
-			margin-right: 2px;
-			vertical-align: bottom;
+		svg {
+			position: relative;
+			top: 1px;
 		}
 
 		svg.reader-star path {
@@ -47,9 +46,6 @@
 		}
 
 		&.comments__comment-actions-cancel-reply {
-			float: right;
-			margin-top: 2px;
-			margin-right: 8px;
 			padding-right: 0;
 		}
 
@@ -62,6 +58,11 @@
 				fill: var(--color-link);
 				vertical-align: bottom;
 			}
+		}
+
+		&.like-button {
+			position: relative;
+			top: 1px;
 		}
 	}
 }
