Updating image border inset (round 1)

--- a/client/blocks/reader-featured-video/style.scss
+++ b/client/blocks/reader-featured-video/style.scss
@@ -1,3 +1,18 @@
+.reader-featured-video {
+	position: relative;
+	&::after {
+		content: "";
+		position: absolute;
+		pointer-events: none;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+		border-radius: 6px;
+	}
+}
+
 .reader-featured-video__video iframe {
 	display: flex;
 }
