--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -719,8 +719,7 @@
 	}
 
 	&.four-images {
-		border-radius: 4px;
-		box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+		border-radius: 6px;
 		height: 302px;
 		max-height: 302px;
 
@@ -733,58 +732,67 @@
 			max-height: 150px;
 			overflow: hidden;
 		}
-		.reader-featured-image img {
+		.reader-featured-image img,
+		.reader-featured-image::after {
 			border-radius: 0;
 		}
 		.reader-post-card__featured-images-item:first-child {
 			.reader-featured-image,
+			.reader-featured-image::after,
 			img {
-				border-top-left-radius: 4px;
+				border-top-left-radius: 6px;
 			}
 		}
 		.reader-post-card__featured-images-item:nth-child(2) {
 			.reader-featured-image,
+			.reader-featured-image::after,
 			img {
-				border-top-right-radius: 4px;
+				border-top-right-radius: 6px;
 			}
 		}
 		.reader-post-card__featured-images-item:nth-child(3) {
 			.reader-featured-image,
+			.reader-featured-image::after,
 			img {
-				border-bottom-left-radius: 4px;
+				border-bottom-left-radius: 6px;
 			}
 		}
 		.reader-post-card__featured-images-item:last-child {
 			.reader-featured-image,
+			.reader-featured-image::after,
 			img {
-				border-bottom-right-radius: 4px;
+				border-bottom-right-radius: 6px;
 			}
 		}
 	}
 
 	&.three-images {
-		border-radius: 4px;
-		box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+		border-radius: 6px;
 
 		.reader-featured-image {
 			border-radius: 0;
 			height: 302px;
 			max-height: 302px;
 		}
-		.reader-featured-image img {
+		.reader-featured-image img,
+		.reader-featured-image::after {
 			border-radius: 0;
 		}
 		/* First image */
 		.reader-post-card__featured-images-item:first-child {
-			border-top-left-radius: 4px;
-			border-bottom-left-radius: 4px;
+			border-top-left-radius: 6px;
+			border-bottom-left-radius: 6px;
 			max-height: 302px;
 			overflow: hidden;
 			width: calc(50% - 1px);
+			.reader-featured-image::after {
+				border-top-left-radius: 6px;
+				border-bottom-left-radius: 6px;
+			}
 		}
 		.reader-post-card__featured-images-item:first-child img {
-			border-bottom-left-radius: 4px;
-			border-top-left-radius: 4px;
+			border-bottom-left-radius: 6px;
+			border-top-left-radius: 6px;
 			height: 100%;
 			max-width: none;
 			object-fit: cover;
@@ -805,13 +813,17 @@
 
 				img {
 					border-radius: 0;
-					border-top-right-radius: 4px;
+					border-top-right-radius: 6px;
 				}
 				.reader-featured-image {
 					border-radius: 0;
-					border-top-right-radius: 4px;
+					border-top-right-radius: 6px;
 					height: 150px;
 					overflow: hidden;
+
+					&::after {
+						border-top-right-radius: 6px;
+					}
 				}
 			}
 			.reader-post-card__featured-images-item:last-child {
@@ -819,21 +831,24 @@
 
 				img {
 					border-radius: 0;
-					border-bottom-right-radius: 4px;
+					border-bottom-right-radius: 6px;
 				}
 				.reader-featured-image {
 					border-radius: 0;
-					border-bottom-right-radius: 4px;
+					border-bottom-right-radius: 6px;
 					max-height: 150px;
 					overflow: hidden;
+
+					&::after {
+						border-bottom-right-radius: 6px;
+					}
 				}
 			}
 		}
 	}
 
 	&.two-images {
-		border-radius: 4px;
-		box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+		border-radius: 6px;
 
 		.reader-post-card__featured-images-item {
 			width: calc(50% - 1px);
@@ -843,7 +858,8 @@
 			height: 300px;
 			max-height: 300px;
 		}
-		.reader-featured-image img {
+		.reader-featured-image img,
+		.reader-featured-image::after {
 			border-radius: 0;
 			height: 100%;
 			max-width: none;
@@ -853,36 +869,38 @@
 		}
 		.reader-post-card__featured-images-item:first-child {
 			.reader-featured-image,
-			img {
-				border-bottom-left-radius: 4px;
-				border-top-left-radius: 4px;
+			.reader-featured-image::after,
+			img  {
+				border-bottom-left-radius: 6px;
+				border-top-left-radius: 6px;
 			}
 		}
 		.reader-post-card__featured-images-item:last-child {
 			.reader-featured-image,
+			.reader-featured-image::after
 			img {
-				border-bottom-right-radius: 4px;
-				border-top-right-radius: 4px;
+				border-bottom-right-radius: 6px;
+				border-top-right-radius: 6px;
 			}
 		}
 	}
 	&.one-image {
 		.reader-post-card__featured-images-item {
 			width: 100%;
-			.reader-featured-image {
-				position: relative;
-				&::after {
-					content: "";
-					position: absolute;
-					pointer-events: none;
-					top: 0;
-					left: 0;
-					bottom: 0;
-					right: 0;
-					box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
-					border-radius: 4px;
-				}
-			}
+		}
+	}
+	.reader-featured-image {
+		position: relative;
+		&::after {
+			content: "";
+			position: absolute;
+			pointer-events: none;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+			box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+			border-radius: 6px;
 		}
 	}
 }
