--- a/client/landing/stepper/declarative-flow/internals/steps-repository/plans/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/plans/style.scss
@@ -1,6 +1,13 @@
 .plans-step {
-	margin: 0 auto;
-	max-width: 700px;
+	padding: 0;
+
+	.step-wrapper__header {
+		margin: 48px 0 40px;
+
+		.formatted-header__subtitle {
+			text-align: center;
+		}
+	}
 
 	.plans__loading-container {
 		margin-top: 18em;
@@ -19,6 +26,25 @@
 		&.is-wide-layout {
 			max-width: 1200px;
 		}
+	}
+
+	.plan-features-comparison__table-item {
+		border-left: none;
+
+		&:last-of-type {
+			border-right: none;
+		}
+	}
+
+	button.is-borderless {
+		color: var(--studio-gray-90);
+		font-weight: 500;
+		border: 0;
+		box-shadow: none;
+		font-size: inherit;
+		line-height: inherit;
+		padding: 0;
+		text-decoration: underline;
 	}
 }
 
@@ -39,11 +65,8 @@
 	margin-top: 25px;
 }
 
-.signup__step.is-plans-link-in-bio .formatted-header__subtitle .button.is-borderless,
-.signup__step.is-plans-newsletter .formatted-header__subtitle .button.is-borderless,
-.signup__step.is-plans .formatted-header__subtitle .button.is-borderless,
-.signup__step.is-plans-launch .formatted-header__subtitle .button.is-borderless,
-.signup__step.is-mailbox-plan .formatted-header__subtitle .button.is-borderless {
+
+.signup__step.is-plans .formatted-header__subtitle .button.is-borderless {
 	padding: 0;
 	color: inherit;
 	font-size: inherit;
@@ -51,6 +74,7 @@
 	line-height: inherit;
 	text-decoration: underline;
 }
+
 
 .plans__loading {
 	width: 100%;
